[metadata]
name = HqExcepthook
summary = Client library for hq api
license = Apache License, Version 2.0
author = jw
author-email =zhoujianwen@haoqiao.com
home-page = https://www.haoqiao.com/
[files]
packages =
    execepthook

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
domain = execepthook
directory = execepthook/locale

[update_catalog]
domain = execepthook
output_dir = execepthook/locale
input_file = execepthook/locale/logclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = execepthook/locale/logclient.pot

[wheel]
universal = 1

[pbr]
warnerrors = true
